# pd-ocr-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONVENTIONS.md  DEVELOPMENT.md  Makefile  NEXT_TODO.md  README.md  install.ps1  install.sh  pyproject.toml
.basedpyright/: baseline.json
.claude/agent-memory/pd-ocr-cli/: MEMORY.md  slow_tests_shared_predictor.md
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  dev-local-upgrade-flow.md  layout-aware-ocr.md  roadmap.md  usage.md
docs/architecture/: layout-aware-ocr.md
docs/archive/plans/: 2026-05-23-basedpyright-baseline-cleanup.md  no-illustration-placeholders.md  upgrade-deps-local.md
docs/conventions/: lint-deviations.md
docs/decisions/: type-suppressions.md
docs/plans/: 2026-05-23-basedpyright-baseline-cleanup.md  2026-05-28-test-suite-reorganization.md  2026-05-29-pdomain-ocr-cli-review-remediation.md  roadmap.md
docs/research/: 2026-05-22-pd-ocr-cli-code-security-review.md  2026-05-29-pdomain-ocr-cli-review-remediation-validation.md  2026-05-30-batch-pages-wip.patch
docs/review/: code-review-2026-05-06.md
docs/runbooks/: dev-local-upgrade-flow.md
docs/specs/: 2026-05-28-test-suite-reorganization-design.md  2026-05-30-predictor-batch-size-tuning.md
docs/usage/: cli-usage.md
pd_ocr_cli/: _hf_download.py  _hf_models.py  _pipeline.py  _text_normalize.py  _update_check.py  ocr_to_txt.py
pdomain_ocr_cli/: _artifacts.py  _batch_plan.py  _hf_models.py  _model_security.py  _pipeline.py  _policy.py  _runtime.py  _startup_notices.py  _update_check.py  ocr_to_txt.py
scripts/: check-editable.py  check_editable.py  do-release.sh  ensure-pwsh.sh  install-cuda-detect.ps1  install-uv-tool.sh  local-check.sh  local-dev.sh  local-install.sh  local-run.sh  local-setup.sh  local-test-slow.sh  local-test.sh  local-uninstall.sh  update-pd-deps.sh  update-pdomain-deps.sh  upgrade-pd-book-tools.sh
tests/: _fakes.py  conftest.py  test_artifacts.py  test_batch_pages.py  test_batch_plan.py  test_collect_images.py  test_gpu_nudge.py  test_hf_models_argparse.py  test_install_ps1.py  test_install_ps1_cuda.py  test_install_ps1_cuda_parse.py  test_install_sh.py  test_main_errors.py  test_main_flag_wiring.py  test_main_happy.py  test_main_mocked.py  test_main_warnings.py  test_model_security.py  test_parse_args.py  test_pipeline_atomic_write.py  test_pipeline_helpers.py  test_pipeline_integration.py  test_pipeline_paths.py  test_pipeline_warnings.py  test_policy.py  test_runtime.py  test_startup_notices.py  test_text_normalize.py  test_torch_device.py  test_update_check_bypass.py  test_update_check_network.py  test_update_check_parsers.py  test_workflows_static.py
tests/fixtures/: title_page_001.expected.txt
