[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pd-ocr-cli"
dynamic = ["version"]
description = "CLI tool for OCR-ing public domain book images to text using fine-tuned DocTR detection and recognition models"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "pd-book-tools>=0.11.1",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
# GPU acceleration is opt-in. Plain `pip install pd-ocr-cli` works on
# CPU-only machines; users with an NVIDIA GPU can install the heavy
# CUDA stack (cupy-cuda12x, opencv-cuda) via:
#   pip install pd-ocr-cli[gpu]
# This forwards to pd-book-tools' own [gpu] extra, which owns the
# actual CUDA dependency list.
gpu = [
    "pd-book-tools[gpu]",
]

[project.scripts]
pd-ocr = "pd_ocr_cli.ocr_to_txt:main"

[project.urls]
Homepage = "https://github.com/ConcaveTrillion/pd-ocr-cli"
Repository = "https://github.com/ConcaveTrillion/pd-ocr-cli"

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "pre-commit>=4.6.0",
    "pytest>=8.3",
    "pytest-cov>=7.0.0",
    "coverage>=7.0",
    "ruff>=0.12.5",
]

[[tool.uv.index]]
name = "pd-index"
url = "https://concavetrillion.github.io/pd-index/simple/"
explicit = true

[tool.uv.sources]
pd-book-tools = { index = "pd-index" }

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "SIM", "UP", "RUF", "ERA", "T20"]

[tool.ruff.lint.per-file-ignores]
# CLI scripts and fixture scripts — print() is the output mechanism
"scripts/*.py" = ["T201"]

[tool.basedpyright]
include = ["pd_ocr_cli", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[[tool.basedpyright.executionEnvironments]]
root = "tests"

[tool.pytest.ini_options]
markers = [
    "slow: end-to-end tests that download a pinned model and run the OCR pipeline (opt in with --run-slow).",
]
addopts = "--cov=pd_ocr_cli --cov-report=term-missing:skip-covered"

[tool.coverage.run]
source = ["pd_ocr_cli"]
branch = true
# The CLI spawns a daemon thread for the GitHub-tag update check; tell
# coverage to instrument across threads so that path is counted when it
# runs (e.g. under --run-slow).
concurrency = ["thread"]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Floor for the fast suite (`make ci`). The unit tests mock every heavy
# pd_book_tools / cv2 / torch dependency so main() is exercised in fast
# tests too. The `_load_*` import-trampolines are auto-excluded via the
# pattern in `exclude_also` below, so 100% is the realistic target —
# any new uncovered line should be either tested or pragma'd with intent.
fail_under = 100
precision = 1
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
    # `_load_*` helpers in ocr_to_txt.py exist solely as monkeypatch points
    # for fast tests; their bodies are trivial `from pd_book_tools... import`
    # statements that the slow integration tests still execute against real
    # models. Excluding the bodies keeps the fast-coverage signal honest
    # (these functions are deliberately not unit-testable in isolation).
    "def _load_[a-z_]+\\(",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
