[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pdomain-ocr-cli"
dynamic = ["version"]
description = "CLI tool for OCR-ing public domain book images to text using fine-tuned DocTR detection and recognition models"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "pdomain-book-tools>=0.14.1",
    "pdomain-ops>=0.3.1",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
# GPU acceleration is opt-in. Plain `pip install pdomain-ocr-cli` works on
# CPU-only machines; users with an NVIDIA GPU can install the heavy
# CUDA stack (cupy-cuda12x, opencv-cuda) via:
#   pip install pdomain-ocr-cli[gpu]
# This forwards to pdomain-book-tools' own [gpu] extra, which owns the
# actual CUDA dependency list.
gpu = [
    "pdomain-book-tools[gpu]",
]

[project.scripts]
pd-ocr = "pdomain_ocr_cli.ocr_to_txt:main"

[project.urls]
Homepage = "https://github.com/pdomain/pdomain-ocr-cli"
Repository = "https://github.com/pdomain/pdomain-ocr-cli"

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "gitlint>=0.19.1",
    "pre-commit>=4.6.0",
    "psutil>=6.0",
    "pytest>=8.3",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.6",
    "coverage>=7.0",
    "ruff>=0.15.13",
]

[[tool.uv.index]]
name = "pdomain-index-pip"
url = "https://pdomain.github.io/pdomain-index-pip/simple/"
explicit = true

[tool.uv.sources]
pdomain-book-tools = { index = "pdomain-index-pip" }
# pdomain-ops is not yet published to pdomain-index-pip. Until it is, resolve
# it from the workspace sibling (path is relative to this pyproject = repo root).
# TODO(release): once pdomain-ops ships to pdomain-index-pip, replace this with
#   pdomain-ops = { index = "pdomain-index-pip" }
# to match book-tools and rely on local-dev mode for the editable overlay.
pdomain-ops = { path = "../pdomain-ops", editable = true }

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # Current baseline
    "E", "W",       # pycodestyle errors/warnings
    "F",            # pyflakes
    "I",            # isort (replaces standalone isort)
    "N",            # pep8-naming
    "B",            # flake8-bugbear -- mutable defaults, broad excepts, etc.
    "SIM",          # flake8-simplify
    "UP",           # pyupgrade
    "RUF",          # ruff-specific rules
    "ERA",          # eradicate -- commented-out code
    "T20",          # flake8-print
    # Added per 2026-05-17 strict-linting decisions
    "ANN",          # flake8-annotations -- force type hints on all sigs
    "S",            # flake8-bandit -- security rules
    "C4",           # flake8-comprehensions
    "PERF",         # perflint -- performance anti-patterns
    "TC",           # flake8-type-checking -- move type-only imports to TYPE_CHECKING
    "TID",          # flake8-tidy-imports
    "PT",           # flake8-pytest-style
    "RET",          # flake8-return
    "PL",           # pylint subset (PLC + PLE + PLR + PLW)
    "D",            # pydocstyle
    # Added per 2026-05-17 guidelines audit (BLE/TRY/LOG/G)
    "BLE",          # flake8-blind-except
    "TRY",          # tryceratops -- TRY400 enforces log.exception over log.error in except
    "LOG",          # flake8-logging -- proper log.* usage
    "G",            # flake8-logging-format -- lazy formatting in log calls
]
ignore = [
    # Line length: many long docstrings, error messages, and URLs; enforcing
    # 88-char wrapping everywhere adds noise without improving readability.
    "E501",
    # Docstring style: D203 (1-blank-before-class-docstring) conflicts with
    # D211 (no-blank-before-class-docstring); D212 (multi-line-summary-first-line)
    # conflicts with D213 (multi-line-summary-second-line). Pick one of each pair.
    "D203",
    "D212",
    # Missing docstrings on public modules/packages/magic-methods: add incrementally.
    "D100",
    "D104",
    "D107",
    # PLR0913 (too-many-arguments): CLI functions legitimately need many params.
    "PLR0913",
    # PLR2004 (magic-value-comparison): common in CLI argument defaults.
    "PLR2004",
    # TRY003 (long-message-outside-exception-class): too noisy for a CLI
    # that uses f-string error messages everywhere.
    "TRY003",
    # COM812 (missing-trailing-comma): conflicts with ruff formatter auto-style.
    "COM812",
    # PLC0415 (import-not-at-top-level): deferred imports are a legitimate
    # pattern here -- used to break circular deps and avoid loading optional-
    # heavy modules (torch, cv2, cupy) until needed (monkeypatch seams).
    "PLC0415",
    # PLR complexity rules: CLI pipeline functions legitimately have high
    # branch/return counts (main() orchestrates the full pipeline).
    "PLR0912",  # too-many-branches
    "PLR0911",  # too-many-return-statements
    "PLR0915",  # too-many-statements
    # ANN401 (dynamically-typed-expressions): some helpers legitimately
    # accept/return Any (e.g. monkeypatch seams, word-object helpers).
    "ANN401",
    # D205 (1-blank-line-required-between-summary-and-description): too noisy.
    "D205",
    # D105 (missing-docstring-in-magic-method): self-documenting; add incrementally.
    "D105",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pdomain_ocr_cli"]

[tool.ruff.lint.per-file-ignores]
# Tests: assert is the idiom (S101); magic numbers common (PLR2004); no
# annotations required (ANN); no docstrings required (D); security rules
# relaxed (S105/S106/S311 -- hardcoded passwords/random are test fixtures);
# pytest.raises match= not required for every test (PT011);
# /tmp paths are fine in tests (S108); trivial comparisons can be intentional (PLR0133);
# loop-var reassignment as pattern (PLW2901); list-building loops in tests are fine (PERF401).
"tests/**/*.py" = ["S101", "S105", "S106", "S311", "T201", "ANN", "D", "PLR2004", "PT011", "S108", "PLR0133", "PLW2901", "PERF401", "S603", "S607"]
# Scripts: print() is the output mechanism; no docstrings required; S607 partial
# executable path is idiomatic when invoking system tools (uv, git, etc.)
"scripts/*.py" = ["T201", "D", "S607"]
# __init__.py: re-exports without docstrings; F401 used for public API surface.
"**/__init__.py" = ["D104", "F401", "TC"]
# Private modules: internal convention, no docstrings required.
"**/_*.py" = ["D"]

[tool.basedpyright]
include = ["pdomain_ocr_cli", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]

# "recommended" is the workspace-canonical strict mode per 2026-05-17 decisions.
# Catches unannotated functions, inferred-Any propagation, untyped decorators,
# and missing return types that "standard" mode skips.
typeCheckingMode = "recommended"
# Warnings are gated via a baseline file (.basedpyright/baseline.json) that grandfathers
# the existing warnings from CuPy/cv2/DocTR stub gaps. New warnings beyond the
# baseline will fail CI. Regenerate the baseline with: uv run basedpyright pdomain_ocr_cli --writebaseline
failOnWarnings = true

# Import cycles are structural and resolved via TYPE_CHECKING guards.
reportImportCycles = "none"

# Tell basedpyright where the venv is so it finds third-party stubs.
venvPath = "."
venv = ".venv"

[[tool.basedpyright.executionEnvironments]]
root = "tests"

[tool.pytest.ini_options]
markers = [
    "slow: end-to-end tests that download a pinned model and run the OCR pipeline (opt in with --run-slow).",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=pdomain_ocr_cli",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
]
filterwarnings = [
    "error",
    # defusedxml 0.7.1 imports xml.etree.cElementTree which is deprecated in
    # Python 3.13. This is triggered transitively by doctr on import. Ignore
    # until defusedxml cuts a Python-3.13-compatible release (>=0.8).
    "ignore:defusedxml.cElementTree is deprecated:DeprecationWarning:defusedxml",
]

[tool.coverage.run]
source = ["pdomain_ocr_cli"]
branch = true
# The CLI spawns a daemon thread for the GitHub-tag update check; tell
# coverage to instrument across threads so that path is counted when it
# runs (e.g. under --run-slow).
concurrency = ["thread"]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Floor for the fast suite (`make ci`). The unit tests mock every heavy
# pdomain_book_tools / cv2 / torch dependency so main() is exercised in fast
# tests too. The `_load_*` import-trampolines are auto-excluded via the
# pattern in `exclude_also` below, so 100% is the realistic target —
# any new uncovered line should be either tested or pragma'd with intent.
fail_under = 100
precision = 1
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
    # `_load_*`, `_pick_device`, and `_run_doctr_batch` helpers in
    # ocr_to_txt.py exist solely as monkeypatch points for fast tests;
    # their bodies are trivial `from pdomain_*... import` statements that
    # the slow integration tests still execute against real models.
    # Excluding the bodies keeps the fast-coverage signal honest
    # (these functions are deliberately not unit-testable in isolation).
    "def _load_[a-z_]+\\(",
    "def _pick_device\\(",
    "def _run_doctr_batch\\(",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
